# continuous-energy-consumption-testing-for-desktop-applications

./: readme.md
empty-test/: CMakeLists.txt  test.cpp.in
patches/: katepatch.diff  kparts.patch
usage_scenarios/kate/: katemainwindow.cpp  scenario_accel.sh  scenario_dbus.sh  scenario_mouse.sh  scenario_shortcuts.sh
usage_scenarios/okular/: scenario_accel.sh  scenario_dbus.sh  scenario_mouse.sh  scenario_shortcuts.sh
